# lecture-notes

./: .gitignore  README.adoc  README.md
images/banner.graffle/: data.plist
sessions/csharp_01/: README.md  slides.html  slides.md
sessions/csharp_02/: slides.html  slides.md
sessions/csharp_03/: slides.html  slides.md
sessions/csharp_04/: slides.html  slides.md
sessions/csharp_05/: slides.html  slides.md
sessions/csharp_06/: slides.html  slides.md
sessions/csharp_07/: slides.html  slides.md
sessions/csharp_08/: slides.html  slides.md
sessions/csharp_09/: slides.html  slides.md
sessions/csharp_10/: slides.html  slides.md
sessions/csharp_11/: slides.html  slides.md
sessions/csharp_12/: slides.html  slides.md
sessions/q_and_a/: Slides.html  Slides.md
sessions/swe_00/: README.md
sessions/swe_01/: Makefile  Slides.html  Slides.md
sessions/swe_02/: Slides.html  Slides.md
sessions/swe_03/: Slides.html  Slides.md
sessions/swe_04/: Slides.html  Slides.md
sessions/swe_05/: Slides.html  Slides.md
sessions/swe_06/: Slides.html  Slides.md
sessions/swe_07/: Slides.html  Slides.md  plot.py
sessions/swe_08/: Slides.html  Slides.md
sessions/swe_08/bdsa_greeter/python/: pyproject.toml
sessions/swe_08/bdsa_greeter/python/bdsa_greeter/: cli.py
sessions/swe_09/: Slides.html  Slides.md
sessions/swe_10/: Slides.html  Slides.md
sessions/swe_11/: Slides.html  Slides.md
sessions/swe_12/: Slides.html  Slides.md  project_demo.md
sessions/the_gilded_rose/: slides.html  slides.md
sessions/the_gilded_rose_recap/: slides.html  slides.md
(+9 files in other folders)
